# mirrored-room

./: .clang-format  .clangd  12.json  12313.json  CMakeLists.txt  FileDialog.cpp  FileDialog.h  MyUI.cpp  MyUI.h  README.md  Ray.cpp  Ray.h  Room.cpp  Room.h  Utils.cpp  Utils.h  main.cpp  maker.sh
.zed/: debug.json  tasks.json
assets/: iconset.rgi
docs/: conf.typ  docs-dev.typ  docs-user.typ  docs.typ  generate_docs.py  thesis.bib
libraries/: CMakeLists.txt
libraries/raygui/: CMakeLists.txt
